[package]
name = "build_msp"
version = "0.1.5"
edition = "2024"
authors = ["arabian"]
description = "A tool that helps to build .msp file mod"
readme = "README.md"
license = "MIT"
homepage = "https://github.com/arabianq/build_msp"
repository = "https://github.com/arabianq/build_msp"
keywords = ["switch", "nintendo", "mod", "mods", "msp"]
build = "build.rs"

[dependencies]
"clap" = {version = "4.5.45", default-features = false, features = ["derive", "std", "help"]}

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
panic = "abort"